# crate-expectations

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  SECURITY.md  check.sh  rustfmt.toml  todo.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/rust-setup/: action.yml
.github/workflows/: release-plz.yml  rust.yml  security-audit.yml  template-ci.yml
benches/: bench.rs
src/: lib.rs
template/: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE-MIT  README.md  SECURITY.md  cargo-generate.toml  pre-script.rhai
template/.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
template/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
template/.github/actions/rust-setup/: action.yml
template/.github/workflows/: bench-gating.yml  bench.yml  careful-pr.yml  careful.yml  coverage.yml  feature-powerset.yml  fuzz.yml  labeler.yml  miri.yml  msrv.yml  no-std.yml  release-dist.yml  release-plz-app.yml  release-plz.yml  rust.yml  sanitizers.yml  scorecard.yml  security-audit.yml  semver.yml
template/benches/: bench.rs
template/fuzz/: Cargo.toml
template/fuzz/fuzz_targets/: fuzz_target_1.rs
template/src/: lib.rs  main.rs
template/tests/: integration.rs
tests/: integration.rs
