[workspace]
members = [
    "riptide",
    "riptide/fuzz",
    "riptide-bencode-derive",
    # "create_torrent",
    # "dht_client"
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["Quentin Kniep <hello@quentinkniep.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/qkniep/riptide"
