[package]
name = "my-crate"
edition = "2024"
version = "0.1.0"
authors = ["Quentin Kniep <hello@quentinkniep.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/qkniep/my-crate"
description = ""

[dependencies]

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
