[package]
name = "my-crate"
edition = "2024"
rust-version = "1.90"
version = "0.1.0"
authors = ["Quentin Kniep <hello@quentinkniep.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/qkniep/my-crate"
description = ""
keywords = []   # TODO: up to 5 search terms, e.g. ["cli", "parser"]
categories = [] # TODO: slugs from https://crates.io/category_slugs

# Keep the published tarball lean with an allowlist: ship only the library source
# and the docs consumers see. Any new top-level dev/CI file is then excluded by
# default, so no one has to remember to denylist it. `Cargo.toml` is always
# included; the LICENSE files must be listed explicitly because `license` is an
# SPDX expression rather than `license-file`. Verify with `cargo package --list`.
include = [
    "src/**/*",
    "README.md",
    "CHANGELOG.md",
    "LICENSE-*",
]

# Optional features go here. Gate the corresponding item with
# `#[cfg(feature = "...")]` and annotate it with
# `#[cfg_attr(docsrs, doc(cfg(feature = "...")))]` so docs.rs shows a feature
# badge (see src/lib.rs). docs.rs builds with `all-features = true` below, so
# every feature listed here gets documented.
# [features]
# default = []
# foo = []

[dependencies]

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false

[lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"
missing_debug_implementations = "warn"
# `missing_docs` lives in `src/lib.rs` (#![warn(missing_docs)]) so it applies to
# the library only, not the test/bench crates.

[lints.clippy]
all = { level = "warn", priority = -1 }
# Opt in to stricter linting by uncommenting:
# pedantic = { level = "warn", priority = -1 }

# Build docs the way docs.rs does: all features, with `--cfg docsrs` so you can
# gate feature-specific docs behind `#[cfg_attr(docsrs, doc(cfg(...)))]`.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
